# FlightLxx

./: .gitignore  CMakeLists.txt  README.md  setup.py
libs/config/: rl_env.yaml  vec_env.yaml
libs/include/bridges/: unity_bridge.hpp  unity_message_types.hpp
libs/include/common/: command.hpp  integrator_base.hpp  integrator_euler.hpp  integrator_rk4.hpp  math.hpp  pend_state.hpp  quad_state.hpp  timer.hpp
libs/include/dynamics/: dynamics_base.hpp  quadrotor_dynamics.hpp
libs/include/envs/: env_base.hpp  rl_env.hpp  test_env.hpp  vec_env.hpp
libs/include/objects/: object_base.hpp  quadrotor.hpp  static_gate.hpp  static_object.hpp  unity_camera.hpp
libs/include/sensors/: imu.hpp  rgb_camera.hpp  sensor_base.hpp
libs/src/bridges/: unity_bridge.cpp
libs/src/common/: command.cpp  integrator_base.cpp  integrator_euler.cpp  integrator_rk4.cpp  logger.cpp  math.cpp  parameter_base.cpp  pend_state.cpp  quad_state.cpp  timer.cpp
libs/src/dynamics/: dynamics_base.cpp  quadrotor_dynamics.cpp
libs/src/envs/: env_base.cpp  rl_env.cpp  test_env.cpp  vec_env.cpp
libs/src/objects/: object_base.cpp  quadrotor.cpp  unity_camera.cpp
libs/src/sensors/: imu.cpp  rgb_camera.cpp  sensor_base.cpp
libs/src/wrapper/: pybind_wrapper.cpp
render/: .gitignore  README.md
rl/BidirectionalThrustControl/: run_test.py  show_training_data.py  test_neural_network.py  trajectory_BTC.csv  trajectory_OPTC.csv
rl/BidirectionalThrustControl/training_data_BTC/: log.txt
rl/BidirectionalThrustControl/training_data_OPTC/: log.txt
rl/LQAH/: iris_and_crazyflie.txt  run_test.py  show_training_data.py  test_neural_network.py
rl/LQAH/DR/: log.txt  progress.csv
rl/LQAH/GA/: log.txt
rl/LQAH/OK/: log.txt
rl/lxx_baselines/envs/: vec_env_wrapper.py
rl/lxx_baselines/ppo/: BTC_test.py  ppo2_test.py
rl/train/: BTC_run.py  run_drone_control.py  show_train_result.py  trajectory_BTC.csv  trajectory_OPTC.csv  view_reward.py
rl/train/AnalysisExperiment/: log.txt  progress.csv
rl/train/BL/: progress.csv
rl/train/BTC_1_NP2G/: progress.csv
rl/train/BTC_2_P2G/: progress.csv
rl/train/GapAlign/: log.txt  progress.csv
rl/train/GapAlignMore/: log.txt  progress.csv
rl/train/LQAH_2/: log.txt
rl/train/LQAH_3/: log.txt  progress.csv
rl/train/LQFF_1/: log.txt  progress.csv
rl/train/LQFF_10/: log.txt  progress.csv
rl/train/LQFF_11/: log.txt  progress.csv
rl/train/LQFF_12/: log.txt  progress.csv
rl/train/LQFF_13/: log.txt  progress.csv
rl/train/LQFF_14_1.0/: log.txt  progress.csv
rl/train/LQFF_15/: log.txt  progress.csv
rl/train/LQFF_16/: log.txt  progress.csv
rl/train/LQFF_17/: log.txt  progress.csv
rl/train/LQFF_18/: log.txt  progress.csv
rl/train/LQFF_19/: progress.csv
rl/train/LQFF_2/: log.txt  progress.csv
rl/train/LQFF_20/: progress.csv
rl/train/LQFF_21/: progress.csv
rl/train/LQFF_22/: log.txt  progress.csv
rl/train/LQFF_3/: log.txt  progress.csv
rl/train/LQFF_4/: log.txt  progress.csv
rl/train/LQFF_5/: log.txt  progress.csv
rl/train/LQFF_6/: log.txt  progress.csv
rl/train/LQFF_7/: log.txt  progress.csv
rl/train/LQFF_8/: log.txt  progress.csv
rl/train/LQFF_9_0.2/: log.txt  (+1 more)
(+31 files in other folders)
